--- a/clientv2/js/client/components/premium-preview.html
+++ b/clientv2/js/client/components/premium-preview.html
@@ -21,6 +21,7 @@
     </div>
     <div id="preview-comp" class="view-price">
 		<div class="price" data-bind="html:price"></div>
+		<div class="content" data-bind="html:content"></div>
 	</div>
   </div>  
 </div>  
