--- a/trunk/clientv2/js/client/components/premium-preview.html
+++ b/trunk/clientv2/js/client/components/premium-preview.html
@@ -1,5 +1,5 @@
 
-<div id="premium" class="content">
+<div id="premium" class="premium-preview">
   <div class="grid scan preview">
     <h5>Enhance your search for investment opportunities</h5>
     <h1>StockFacts Premium</h1>
