--- a/branches/portfolio/clientv2/js/client/templates/login-bar.tmpl.html
+++ b/branches/portfolio/clientv2/js/client/templates/login-bar.tmpl.html
@@ -14,7 +14,7 @@
 		<ul>
 			<li class="subscribe" data-bind="css: {'hide': (libSubscribe() == true)}"><a target="_top" href="purchase-account.html">Purchase</a></li>
 			<li class="account"><a data-bind="siteLink: { id: 'account-settings'}">Account</a></li>
-			<li class="alerts" data-bind="css: {'hide': (libAlerts() == true)}"><a data-bind="siteLink: { id: 'alerts'}">Alerts</a></li>
+			<li class="alerts" data-bind="css: {'hide': (libAlerts() == true)}"><a data-bind="siteLink: { id: 'alerts'}">StockList</a></li>
 			<li class="last"><a data-bind="siteLink: { id: 'logout'} ">Sign Out</a></li>
 		</ul>
 		<div class="right hidden" data-bind="css: {'show-hidden': PAGE.userStatus() != 'EXPIRED'}">
