--- a/branches/portfolio/clientv2/css/valuation.css
+++ b/branches/portfolio/clientv2/css/valuation.css
@@ -1,7 +1,228 @@
-#technical-chart-wrapper {
-  width:718px;
-  float:right;
+.valuation-performance {
+	height: 920px; //
+	display: none;
+	position: relative;
+	border-right: 1px solid #cacdd3;
+	border-left: 1px solid #cacdd3;
+	border-bottom: 1px solid #cacdd3;
+	padding-bottom: 10px;
 }
 
-#technical-chart-container {
-  height: 475px; }
+.valuation-performance a {
+	text-decoration: none;
+}
+
+.valuation-performance ul {
+	padding: 8px 0;
+	margin: 0;
+}
+
+.valuation-performance .header-bar li {
+	list-style: none;
+	display: inline-block;
+	margin-left: 8px;
+}
+
+.valuation-performance .header-bar li:first-child {
+	margin-left: 0;
+	padding-right: 10px;
+	border-right: 2px solid #fff;
+}
+
+.valuation-performance .content {
+	padding: 20px;
+	text-align: right;
+}
+
+.valuation-performance .content label {
+	display: block;
+}
+
+.header-bar {
+	background: #0e236b;
+	text-align: center;
+	font-weight: bold;
+}
+
+.header-bar a {
+	color: #ffffff;
+}
+
+.header-bar a:hover {
+	color: #ffffff;
+}
+
+.header-bar a.active {
+	cursor: default;
+	color: #4d4e50;
+}
+
+.performance, .transactions {
+	display: none;
+}
+
+.show-hidden {
+	display: block !important;
+}
+
+.valuation-results {
+	margin-top: 15px;
+	display: none;
+}
+
+.valuation-results .toolbar {
+	background-color: #f3f3f3;
+	border-image: none;
+	border-style: solid none;
+	border-width: 1px medium;
+	height: 39px;
+	border-top: 1px solid #dcdcdc;
+	border-bottom: 1px solid #dcdcdc;
+}
+
+.valuation-results .toolbar .column {
+	width: 33%;
+	display: inline-block;
+}
+
+.valuation-results .toolbar.home .column {
+	width: 33%;
+	display: inline-block;
+	float: left;
+}
+
+.valuation-results .toolbar.home .column.center, .valuation-results .toolbar.home .column.right
+	{
+	position: relative;
+	top: 7px;
+}
+
+.valuation-results .toolbar .results {
+	color: #565a5c;
+	font-size: 14px;
+	font-style: italic;
+	line-height: 39px;
+	text-indent: 10px;
+}
+
+.valuation-results .toolbar .customize {
+	margin-right: 16px !important;
+	text-align: center;
+	width: 200px;
+}
+
+.valuation-results table {
+	border-spacing: 0;
+	border-collapse: collapse;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	width: 100%;
+	border-right: 1px solid #ccc;
+}
+
+.valuation-results table thead tr {
+	background: #eee;
+}
+
+.valuation-results table thead tr th {
+	color: #0e236b;
+	border: 1px solid #ccc;
+	padding: 8px 12px;
+	font: bold 14px/12px Arial, Helvetica, sans-serif;
+	text-align: center;
+	cursor: pointer;
+	vertical-align: top;
+}
+
+.valuation-results table thead tr th span {
+	color: #0e236b;
+	display: block;
+}
+
+.valuation-results table thead tr th span.fmt {
+	font-size: smaller;
+	font-weight: normal;
+	margin-top: 3px;
+}
+
+.valuation-results table thead tr th.asc {
+	background: url("../img/sort_ascending.png") no-repeat right 5px center;
+}
+
+.valuation-results table thead tr th.desc {
+	background: url("../img/sort_descending.png") no-repeat right 5px center;
+}
+
+.valuation-results table tbody td {
+	color: #000;
+	border: 1px solid #ccc;
+	padding: 8px 12px;
+	font: normal 12px/12px Arial, Helvetica, sans-serif;
+	text-align: center;
+	line-height: 125%;
+	vertical-align: top;
+}
+
+.valuation-results table .industryGroup {
+	text-align: left;
+	width: 220px;
+}
+
+.valuation-results table .companyName {
+	text-align: left;
+	width: 220px;
+}
+
+.valuation-results table .tickerCode {
+	width: 50px;
+}
+
+.valuation-results table tbody td a {
+	color: #1e217c;
+}
+
+.valuation-results .pager {
+	font-weight: bold;
+	text-align: right;
+}
+
+.valuation-results .pager input {
+	width: 25px;
+	display: inline-block;
+	margin: 0 6px;
+	text-align: center;
+}
+
+.valuation-results .pager .action-btn {
+	margin-left: 6px;
+}
+
+.valuation-results .pager .action-btn.left {
+	margin-right: 6px;
+}
+
+.no-results {
+	margin: 10px 0 20px 0;
+	padding: 15px;
+	border: 1px solid #CCC;
+	font-weight: bold;
+}
+
+.customize-display-modal {
+	width: 550px;
+	height: 460px;
+}
+
+.customize-display-modal span {
+	display: inline-block;
+	width: 46%;
+}
+
+.search-button {
+	display: inline-block;
+	background: #0e236b;
+	-webkit-border-radius: 4px;
+	padding: 3px 7px 3px 7px;
+	color: #fff !important;
+	cursor: pointer;
+}
