--- a/clientv2/css/valuation.css
+++ b/clientv2/css/valuation.css
@@ -218,7 +218,7 @@
 	width: 46%;
 }
 
-.search-button {
+.add-button {
 	display: inline-block;
 	background: #0e236b;
 	-webkit-border-radius: 4px;
