--- a/branches/portfolio/clientv2/css/valuation.css
+++ b/branches/portfolio/clientv2/css/valuation.css
@@ -191,6 +191,17 @@
     height: 30px;
     text-align: left;
     display: inline-block;
+    font: bold 12px/12px Arial, Helvetica, sans-serif;
+}
+
+.valuation-results table tbody td {
+	color: #000;
+	border: 1px solid #ccc;
+	padding: 8px 12px;
+	font: bold 12px/12px Arial, Helvetica, sans-serif;
+	text-align: center;
+	line-height: 280%;
+	vertical-align: top;
 }
 
 .transactions .select-company {
@@ -260,11 +271,11 @@
 }
 
 .valuation-results .company-row {
-	color: #000;
-	border: 1px solid #ccc;
-	padding: 8px 12px;
-	font: normal 12px/12px Arial, Helvetica, sans-serif;
-	text-align: left;
-	line-height: 125%;
-	vertical-align: top;
+    color: #000;
+    border: 1px solid #ccc;
+    padding: 8px 12px;
+    font: bold 12px/12px Arial, Helvetica, sans-serif;
+    text-align: left;
+    line-height: 280%;
+    vertical-align: top;
 }
