--- a/clientv2/js/client/components/premium-preview.html
+++ b/clientv2/js/client/components/premium-preview.html
@@ -2,8 +2,8 @@
 <div id="premium" class="premium-preview">
   <div class="grid scan preview">
     <h5>Enhance your search for investment opportunities</h5>
-    <h1>StockFacts Premium</h1>
-    <h4><span data-bind="text:sectionName" style="font-size:16px; font-weight:bold;"></span> are only available with a StockFacts Premium account.</h4>
+    <h1>StockFacts Plus</h1>
+    <h4><span data-bind="text:sectionName" style="font-size:16px; font-weight:bold;"></span> are only available with a StockFacts Plus account.</h4>
   </div>
   
   <div class="grid premium-wrapper">
@@ -11,7 +11,7 @@
       <p>Ability to create and manage a watch list</p>
       <!--<p>Access to additional companies and currencies</p>-->
       <p>Access to estimates and advanced charting</p>
-      <p>Real time market data <i>(only available with a paid Premium account)</i></p>
+      <p>Real time market data <i>(only available with a paid Plus account)</i></p>
       <div data-bind="visible:userStatus == 'EXPIRED'">
         <a class="button" href="purchase-account.html" target="_top">PURCHASE</a>
       </div>
@@ -21,7 +21,6 @@
     </div>
     <div id="preview-comp" class="view-price">
 		<div class="price" data-bind="html:price"></div>
-		<div class="content" data-bind="html:content"></div>
 	</div>
   </div>  
 </div>  
