--- a/branches/portfolio/clientv2/css/alerts.css
+++ b/branches/portfolio/clientv2/css/alerts.css
@@ -7,9 +7,9 @@
 .intro input.text { border: 1px solid #c4c4c4; color: #333; display: inline-block; width: 160px; padding: 0 5px; line-height: 22px; height: 22px; }
 .intro  .button { display: inline-block; }
 
-#alerts { display: none; }
+#alerts { display: none;border: 2px solid #ebecec; padding: 0px 10px 10px; z-index: 1; position:relative;top:-2px; }
 
-#alerts-content-alternative { margin: 15px 0 0 0; }
+#alerts-content-alternative { margin: 0 0 0 0; }
 
 .wl-container { overflow: hidden; min-height: 300px; /*display: none;*/ }
 
@@ -92,7 +92,7 @@
 
 
 /* Portfolio StockList Navigation */
-.header .profilestocklist { margin: 18px 0; }
+.header .profilestocklist { margin: 18px 0 0; position: relative; z-index:3;}
 .header .profilestocklist .left { float: left; margin: 28px 0 10px 22px; width: 68.5%; }
 .header .profilestocklist .right { float: right; margin: 0 18px 0 0; }
 .header .profilestocklist h1 { margin: 0 0 10px 0 !important; }
@@ -119,7 +119,7 @@
 .header .profilestocklist .profilestocklist-bar a.add { background-position: 0 -59px; padding: 1px 0 0 21px; }
 .header .profilestocklist .profilestocklist-bar a.down-print { background-position: 0 -86px; padding: 2px 0 0 21px; } 
 
-.header .profilestocklist nav { margin: 10px 22px 0 24px; position: relative; }
+.header .profilestocklist nav { margin: 10px 22px 0 24px; position: relative; z-index:3; }
 .header .profilestocklist nav ul { font-size: 0; overflow: hidden; margin-left: 120px;}
 .header .profilestocklist nav ul li { display: inline-block; font-size: 13pt !important; line-height: 38px; padding-top:2px; margin: 0 2px 0 0;}
 .header .profilestocklist nav ul li a { font-size:12pt; padding: 10px 45px;text-decoration: none;border: 2px solid #ebecec; border-bottom: 0 !important; border-radius: 8px 8px 0 0;background: #ebecec; }
